--- a/index.css
+++ b/index.css
@@ -61,6 +61,11 @@ body {
     background-color: #00a8e8;
 }
 
+/* HARD CHECK*/
+.hardCheck {
+    margin-bottom: 0;
+    margin-top: 0.2em;
+}
 
 /* START AND RESET BUTTONS */
 
@@ -70,7 +75,8 @@ body {
 }
 
 #startBtn:disabled,
-#resetBtn:disabled {
+#resetBtn:disabled
+#hard:disabled {
     background-color: #eee;
     transform: none;
     box-shadow: none;
